// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SingleSelect [common] example testing should match snapshot(s) for 01.basic 1`] = `
<DropMenu
  ContextMenu={
    Object {
      "alignment": "start",
      "direction": "down",
      "directonOffset": 0,
      "getAlignmentOffset": [Function],
      "isExpanded": true,
      "minWidthOffset": 0,
      "onClickOut": null,
      "portalId": null,
    }
  }
  alignment="start"
  className="lucid-SingleSelect"
  direction="down"
  flyOutStyle={
    Object {
      "maxHeight": "18em",
    }
  }
  focusedIndex={null}
  isDisabled={false}
  isExpanded={false}
  onCollapse={[Function]}
  onExpand={[Function]}
  onFocusNext={[Function]}
  onFocusOption={[Function]}
  onFocusPrev={[Function]}
  onSelect={[Function]}
  selectedIndices={Array []}
>
  <DropMenu.Control>
    <div
      className="lucid-SingleSelect-Control"
      tabIndex={0}
    >
      <span
        className="lucid-SingleSelect-Control-content"
      >
        Select Color
      </span>
      <CaretIcon
        direction="down"
        size={8}
        viewBox="0 3 16 8"
      />
    </div>
  </DropMenu.Control>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Red
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Green
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Blue
  </DropMenu.Option>
</DropMenu>
`;

exports[`SingleSelect [common] example testing should match snapshot(s) for 02.named-options 1`] = `
<DropMenu
  ContextMenu={
    Object {
      "alignment": "start",
      "direction": "down",
      "directonOffset": 0,
      "getAlignmentOffset": [Function],
      "isExpanded": true,
      "minWidthOffset": 0,
      "onClickOut": null,
      "portalId": null,
    }
  }
  alignment="start"
  className="lucid-SingleSelect"
  direction="down"
  flyOutStyle={
    Object {
      "maxHeight": "18em",
    }
  }
  focusedIndex={null}
  isDisabled={false}
  isExpanded={false}
  onCollapse={[Function]}
  onExpand={[Function]}
  onFocusNext={[Function]}
  onFocusOption={[Function]}
  onFocusPrev={[Function]}
  onSelect={[Function]}
  selectedIndices={Array []}
>
  <DropMenu.Control>
    <div
      className="lucid-SingleSelect-Control"
      tabIndex={0}
    >
      <span
        className="lucid-SingleSelect-Control-content"
      >
        Select Color
      </span>
      <CaretIcon
        direction="down"
        size={8}
        viewBox="0 3 16 8"
      />
    </div>
  </DropMenu.Control>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    name="red"
  >
    Red
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    name="green"
  >
    Green
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    name="blue"
  >
    Blue
  </DropMenu.Option>
</DropMenu>
`;

exports[`SingleSelect [common] example testing should match snapshot(s) for 03.disabled-options 1`] = `
<DropMenu
  ContextMenu={
    Object {
      "alignment": "start",
      "direction": "down",
      "directonOffset": 0,
      "getAlignmentOffset": [Function],
      "isExpanded": true,
      "minWidthOffset": 0,
      "onClickOut": null,
      "portalId": null,
    }
  }
  alignment="start"
  className="lucid-SingleSelect"
  direction="down"
  flyOutStyle={
    Object {
      "maxHeight": "18em",
    }
  }
  focusedIndex={null}
  isDisabled={false}
  isExpanded={false}
  onCollapse={[Function]}
  onExpand={[Function]}
  onFocusNext={[Function]}
  onFocusOption={[Function]}
  onFocusPrev={[Function]}
  onSelect={[Function]}
  selectedIndices={Array []}
>
  <DropMenu.Control>
    <div
      className="lucid-SingleSelect-Control"
      tabIndex={0}
    >
      <span
        className="lucid-SingleSelect-Control-content"
      >
        Select Color
      </span>
      <CaretIcon
        direction="down"
        size={8}
        viewBox="0 3 16 8"
      />
    </div>
  </DropMenu.Control>
  <DropMenu.Option
    isDisabled={true}
    isHidden={false}
    isWrapped={true}
  >
    Red
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Green
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    isHidden={false}
    isWrapped={true}
  >
    Blue
  </DropMenu.Option>
</DropMenu>
`;

exports[`SingleSelect [common] example testing should match snapshot(s) for 04.disabled-select 1`] = `
<DropMenu
  ContextMenu={
    Object {
      "alignment": "start",
      "direction": "down",
      "directonOffset": 0,
      "getAlignmentOffset": [Function],
      "isExpanded": true,
      "minWidthOffset": 0,
      "onClickOut": null,
      "portalId": null,
    }
  }
  alignment="start"
  className="lucid-SingleSelect"
  direction="down"
  flyOutStyle={
    Object {
      "maxHeight": "18em",
    }
  }
  focusedIndex={null}
  isDisabled={true}
  isExpanded={false}
  onCollapse={[Function]}
  onExpand={[Function]}
  onFocusNext={[Function]}
  onFocusOption={[Function]}
  onFocusPrev={[Function]}
  onSelect={[Function]}
  selectedIndices={Array []}
>
  <DropMenu.Control>
    <div
      className="lucid-SingleSelect-Control lucid-SingleSelect-Control-is-disabled"
      tabIndex={0}
    >
      <span
        className="lucid-SingleSelect-Control-content"
      >
        Select Color
      </span>
      <CaretIcon
        direction="down"
        size={8}
        viewBox="0 3 16 8"
      />
    </div>
  </DropMenu.Control>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Red
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Green
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Blue
  </DropMenu.Option>
</DropMenu>
`;

exports[`SingleSelect [common] example testing should match snapshot(s) for 05.grouped-options 1`] = `
<DropMenu
  ContextMenu={
    Object {
      "alignment": "start",
      "direction": "down",
      "directonOffset": 0,
      "getAlignmentOffset": [Function],
      "isExpanded": true,
      "minWidthOffset": 0,
      "onClickOut": null,
      "portalId": null,
    }
  }
  alignment="start"
  className="lucid-SingleSelect"
  direction="down"
  flyOutStyle={
    Object {
      "maxHeight": "18em",
    }
  }
  focusedIndex={null}
  isDisabled={false}
  isExpanded={false}
  onCollapse={[Function]}
  onExpand={[Function]}
  onFocusNext={[Function]}
  onFocusOption={[Function]}
  onFocusPrev={[Function]}
  onSelect={[Function]}
  selectedIndices={Array []}
>
  <DropMenu.Control>
    <div
      className="lucid-SingleSelect-Control"
      tabIndex={0}
    >
      <span
        className="lucid-SingleSelect-Control-content"
      >
        Select Color
      </span>
      <CaretIcon
        direction="down"
        size={8}
        viewBox="0 3 16 8"
      />
    </div>
  </DropMenu.Control>
  <DropMenu.OptionGroup
    isHidden={false}
  >
    Screen
    <SingleSelect.Option>
      Red
    </SingleSelect.Option>
    <SingleSelect.Option>
      Green
    </SingleSelect.Option>
    <SingleSelect.Option>
      Blue
    </SingleSelect.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
    >
      Red
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
    >
      Green
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
    >
      Blue
    </DropMenu.Option>
  </DropMenu.OptionGroup>
  <DropMenu.OptionGroup
    isHidden={false}
  >
    Print
    <SingleSelect.Option>
      Cyan
    </SingleSelect.Option>
    <SingleSelect.Option>
      Yellow
    </SingleSelect.Option>
    <SingleSelect.Option>
      Magenta
    </SingleSelect.Option>
    <SingleSelect.Option>
      Black
    </SingleSelect.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
    >
      Cyan
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
    >
      Yellow
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
    >
      Magenta
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
    >
      Black
    </DropMenu.Option>
  </DropMenu.OptionGroup>
</DropMenu>
`;

exports[`SingleSelect [common] example testing should match snapshot(s) for 06.no-unselect 1`] = `
<DropMenu
  ContextMenu={
    Object {
      "alignment": "start",
      "direction": "down",
      "directonOffset": 0,
      "getAlignmentOffset": [Function],
      "isExpanded": true,
      "minWidthOffset": 0,
      "onClickOut": null,
      "portalId": null,
    }
  }
  alignment="start"
  className="lucid-SingleSelect"
  direction="down"
  flyOutStyle={
    Object {
      "maxHeight": "18em",
    }
  }
  focusedIndex={null}
  isDisabled={false}
  isExpanded={false}
  onCollapse={[Function]}
  onExpand={[Function]}
  onFocusNext={[Function]}
  onFocusOption={[Function]}
  onFocusPrev={[Function]}
  onSelect={[Function]}
  selectedIndices={Array []}
>
  <DropMenu.Control>
    <div
      className="lucid-SingleSelect-Control"
      tabIndex={0}
    >
      <span
        className="lucid-SingleSelect-Control-content"
      >
        Select Foo
      </span>
      <CaretIcon
        direction="down"
        size={8}
        viewBox="0 3 16 8"
      />
    </div>
  </DropMenu.Control>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Red
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Green
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Blue
  </DropMenu.Option>
</DropMenu>
`;

exports[`SingleSelect [common] example testing should match snapshot(s) for 07.max-menu-height 1`] = `
<DropMenu
  ContextMenu={
    Object {
      "alignment": "start",
      "direction": "down",
      "directonOffset": 0,
      "getAlignmentOffset": [Function],
      "isExpanded": true,
      "minWidthOffset": 0,
      "onClickOut": null,
      "portalId": null,
    }
  }
  alignment="start"
  className="lucid-SingleSelect"
  direction="down"
  flyOutStyle={
    Object {
      "maxHeight": "12em",
    }
  }
  focusedIndex={null}
  isDisabled={false}
  isExpanded={false}
  onCollapse={[Function]}
  onExpand={[Function]}
  onFocusNext={[Function]}
  onFocusOption={[Function]}
  onFocusPrev={[Function]}
  onSelect={[Function]}
  selectedIndices={Array []}
>
  <DropMenu.Control>
    <div
      className="lucid-SingleSelect-Control"
      tabIndex={0}
    >
      <span
        className="lucid-SingleSelect-Control-content"
      >
        Select Color
      </span>
      <CaretIcon
        direction="down"
        size={8}
        viewBox="0 3 16 8"
      />
    </div>
  </DropMenu.Control>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Aliceblue
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Antiquewhite
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Aqua
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Aquamarine
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Azure
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Beige
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Bisque
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Black
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Blanchedalmond
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Blue
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Blueviolet
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Brown
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Burlywood
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Cadetblue
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Chartreuse
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Chocolate
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Coral
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Cornflowerblue
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Cornsilk
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Crimson
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Cyan
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Darkblue
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Darkcyan
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Darkgoldenrod
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Darkgray
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Darkgreen
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Darkkhaki
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Darkmagenta
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Darkolivegreen
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Darkorange
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Darkorchid
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Darkred
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Darksalmon
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Darkseagreen
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Darkslateblue
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Darkslategray
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Darkturquoise
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Darkviolet
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Deeppink
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Deepskyblue
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Dimgray
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Dodgerblue
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Firebrick
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Floralwhite
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Forestgreen
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Fuchsia
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Gainsboro
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Ghostwhite
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Gold
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Goldenrod
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Gray
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Green
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Greenyellow
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Honeydew
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Hotpink
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Indianred
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Indigo
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Ivory
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Khaki
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Lavender
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Lavenderblush
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Lawngreen
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Lemonchiffon
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Lightblue
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Lightcoral
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Lightcyan
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Lightgoldenrodyellow
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Lightgray
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Lightgreen
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Lightpink
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Lightsalmon
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Lightseagreen
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Lightskyblue
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Lightslategray
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Lightsteelblue
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Lightyellow
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Lime
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Limegreen
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Linen
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Magenta
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Maroon
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Medium aquamarine
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Mediumblue
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Mediumorchid
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Mediumpurple
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Mediumseagreen
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Mediumslateblue
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Mediumspringgreen
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Mediumturquoise
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Mediumvioletred
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Midnightblue
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Mintcream
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Mistyrose
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Moccasin
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Navajowhite
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Navy
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Oldlace
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Olive
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Olivedrab
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Orange
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Orangered
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Orchid
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Palegoldenrod
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Palegreen
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Paleturquoise
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Palevioletred
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Papayawhip
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Peachpuff
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Peru
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Pink
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Plum
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Powderblue
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Purple
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Rebeccapurple
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Red
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Rosybrown
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Royalblue
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Saddlebrown
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Salmon
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Sandybrown
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Seagreen
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Seashell
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Sienna
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Silver
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Skyblue
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Slateblue
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Slategray
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Snow
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Springgreen
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Steelblue
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Tan
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Teal
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Thistle
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Tomato
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Turquoise
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Violet
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Wheat
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    White
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Whitesmoke
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Yellow
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Yellowgreen
  </DropMenu.Option>
</DropMenu>
`;

exports[`SingleSelect [common] example testing should match snapshot(s) for 08.rich-content 1`] = `
<DropMenu
  ContextMenu={
    Object {
      "alignment": "start",
      "direction": "down",
      "directonOffset": 0,
      "getAlignmentOffset": [Function],
      "isExpanded": true,
      "minWidthOffset": 0,
      "onClickOut": null,
      "portalId": null,
    }
  }
  alignment="start"
  className="lucid-SingleSelect"
  direction="down"
  flyOutStyle={
    Object {
      "maxHeight": "18em",
    }
  }
  focusedIndex={null}
  isDisabled={false}
  isExpanded={false}
  onCollapse={[Function]}
  onExpand={[Function]}
  onFocusNext={[Function]}
  onFocusOption={[Function]}
  onFocusPrev={[Function]}
  onSelect={[Function]}
  selectedIndices={Array []}
>
  <DropMenu.Control>
    <div
      className="lucid-SingleSelect-Control"
      tabIndex={0}
    >
      <span
        className="lucid-SingleSelect-Control-content"
      >
        <PlusIcon
          isBadge={true}
          style={
            Object {
              "backgroundColor": "gray",
              "marginRight": 4,
            }
          }
        />
         
        Add Color
      </span>
      <CaretIcon
        direction="down"
        size={8}
        viewBox="0 3 16 8"
      />
    </div>
  </DropMenu.Control>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    <PlusIcon
      isBadge={true}
      style={
        Object {
          "backgroundColor": "red",
          "marginRight": 4,
        }
      }
    />
     
    Red
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    <PlusIcon
      isBadge={true}
      style={
        Object {
          "backgroundColor": "green",
          "marginRight": 4,
        }
      }
    />
     
    Green
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    <PlusIcon
      isBadge={true}
      style={
        Object {
          "backgroundColor": "blue",
          "marginRight": 4,
        }
      }
    />
     
    Blue
  </DropMenu.Option>
</DropMenu>
`;

exports[`SingleSelect [common] example testing should match snapshot(s) for 09.no-selection-highlighting 1`] = `
<DropMenu
  ContextMenu={
    Object {
      "alignment": "start",
      "direction": "down",
      "directonOffset": 0,
      "getAlignmentOffset": [Function],
      "isExpanded": true,
      "minWidthOffset": 0,
      "onClickOut": null,
      "portalId": null,
    }
  }
  alignment="start"
  className="lucid-SingleSelect"
  direction="down"
  flyOutStyle={
    Object {
      "maxHeight": "18em",
    }
  }
  focusedIndex={null}
  isDisabled={false}
  isExpanded={false}
  onCollapse={[Function]}
  onExpand={[Function]}
  onFocusNext={[Function]}
  onFocusOption={[Function]}
  onFocusPrev={[Function]}
  onSelect={[Function]}
  selectedIndices={Array []}
>
  <DropMenu.Control>
    <div
      className="lucid-SingleSelect-Control"
      tabIndex={0}
    >
      <span
        className="lucid-SingleSelect-Control-content"
      >
        Select Foo
      </span>
      <CaretIcon
        direction="down"
        size={8}
        viewBox="0 3 16 8"
      />
    </div>
  </DropMenu.Control>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Red
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Green
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Blue
  </DropMenu.Option>
</DropMenu>
`;

exports[`SingleSelect [common] example testing should match snapshot(s) for 10.array-options 1`] = `
<DropMenu
  ContextMenu={
    Object {
      "alignment": "start",
      "direction": "down",
      "directonOffset": 0,
      "getAlignmentOffset": [Function],
      "isExpanded": true,
      "minWidthOffset": 0,
      "onClickOut": null,
      "portalId": null,
    }
  }
  alignment="start"
  className="lucid-SingleSelect"
  direction="down"
  flyOutStyle={
    Object {
      "maxHeight": "18em",
    }
  }
  focusedIndex={null}
  isDisabled={false}
  isExpanded={false}
  onCollapse={[Function]}
  onExpand={[Function]}
  onFocusNext={[Function]}
  onFocusOption={[Function]}
  onFocusPrev={[Function]}
  onSelect={[Function]}
  selectedIndices={Array []}
>
  <DropMenu.Control>
    <div
      className="lucid-SingleSelect-Control"
      tabIndex={0}
    >
      <span
        className="lucid-SingleSelect-Control-content"
      >
        Select a number
      </span>
      <CaretIcon
        direction="down"
        size={8}
        viewBox="0 3 16 8"
      />
    </div>
  </DropMenu.Control>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    1
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    2
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    3
  </DropMenu.Option>
</DropMenu>
`;

exports[`SingleSelect [common] example testing should match snapshot(s) for 11.stateless 1`] = `
<DropMenu
  ContextMenu={
    Object {
      "alignment": "start",
      "direction": "down",
      "directonOffset": 0,
      "getAlignmentOffset": [Function],
      "isExpanded": true,
      "minWidthOffset": 0,
      "onClickOut": null,
      "portalId": null,
    }
  }
  alignment="start"
  className="lucid-SingleSelect"
  direction="down"
  flyOutStyle={Object {}}
  focusedIndex={2}
  isDisabled={false}
  isExpanded={true}
  onCollapse={[Function]}
  onExpand={[Function]}
  onFocusNext={[Function]}
  onFocusOption={[Function]}
  onFocusPrev={[Function]}
  onSelect={[Function]}
  selectedIndices={
    Array [
      1,
    ]
  }
>
  <DropMenu.Control>
    <div
      className="lucid-SingleSelect-Control lucid-SingleSelect-Control-is-highlighted lucid-SingleSelect-Control-is-selected lucid-SingleSelect-Control-is-expanded"
      tabIndex={0}
    >
      <span
        className="lucid-SingleSelect-Control-content"
      >
        Green
      </span>
      <CaretIcon
        direction="down"
        size={8}
        viewBox="0 3 16 8"
      />
    </div>
  </DropMenu.Control>
  <DropMenu.NullOption>
    Select Color
  </DropMenu.NullOption>
  <DropMenu.OptionGroup
    isHidden={false}
  >
    Preferred
    <SingleSelect.Option>
      Red
    </SingleSelect.Option>
    <SingleSelect.Option>
      Green
    </SingleSelect.Option>
    <SingleSelect.Option>
      Blue
    </SingleSelect.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
    >
      Red
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
    >
      Green
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
    >
      Blue
    </DropMenu.Option>
  </DropMenu.OptionGroup>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
  >
    Orange
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    isHidden={false}
    isWrapped={true}
  >
    Violet
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    isHidden={false}
    isWrapped={true}
  >
    Brown
  </DropMenu.Option>
</DropMenu>
`;
